--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "techdegree-fullstackjs-course-review-rest-api",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "src/app.js",
   "scripts": {
-    "start": "nodemon ./src/index.js localhost 5000"
+    "start": "nodemon ./src/app.js localhost 3000"
   },
   "author": "",
   "license": "ISC",
@@ -12,7 +12,11 @@
     "nodemon": "^1.17.5"
   },
   "dependencies": {
+    "basic-auth": "^2.0.0",
+    "bcrypt": "^3.0.0",
+    "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "mongoose": "^5.2.9",
     "morgan": "^1.9.0"
   }
